    * Removes exception caching in DefaultJOSEProcessor and DefaultJWTProcessor
      (iss #229).
    * JWK.parseFromPEMEncodedObjects should throw a JOSEException on a missing
      PEM-encoded public key required to construct the JWK (iss #331).

version 8.1 (2019-10-15)
    * Extends DefaultJWTClaimsVerifier with configurable checks for "iat",
      "exp", "nbf", "iss" and "aud".

version 8.2 (2019-10-17)
    * Redesigns DefaultJWTClaimsVerifier to support complex audience checks,
      arbitrary exact claim matching, presence and prohibited checks.

version 8.2.1 (2019-11-07)
    * IOUtils.readFileToString must close FileInputStream after usage to
      release resources (iss #342).

version 8.3 (2019-12-14)
    * The Curve.P_256K ("P-256K") is given a new name as Curve.SECP256K1
      ("secp256k1") following a change in the underlying "COSE and JOSE
      Registrations for WebAuthn Algorithms"
      (draft-ietf-cose-webauthn-algorithms-03) specification. The old
      Curve.P_256K is deprecated (iss #341).

version 8.4 (2019-12-21)
    * Adds new JWTClaimsSet.Builder.getClaims method.

version 8.4.1 (2020-01-25)
    * Fixes overflow bug in Base64 decode method (iss #345).

version 8.5 (2020-01-27)
    * Makes X509CertUtils.PEM_BEGIN_MARKER and PEM_END_MARKER constants public.

version 8.5.1 (2020-02-04)
    * Removes redundant PEM parsing in JWK.parseFromPEMEncodedObjects (iss
      #344).
    * Removes parsedX5c from JWK.equals and JWK.hashCode calculation because
      it's redundant (iss #346).

version 8.6 (2020-02-09)
    * Adds JWK toRSAKey, toECKey, toOctetSequenceKey and toOctetKeyPair cast
      methods.

version 8.7 (2020-02-22)
    * Adds new X509CertChainUtils.parse(String) and parse(File) methods.
    * Adds new X509CertChainUtils.store(KeyStore,List<X509Certificate>) method.

version 8.8 (2020-02-23)
    * Adds new X509CertUtils.store method for storing private key / X.509
      certificates pairs in a Java KeyStore.